Fixed select menu z-index issue

--- a/src/styles/components/_select.scss
+++ b/src/styles/components/_select.scss
@@ -38,7 +38,7 @@
   --neeto-ui-select-menu-border-radius: var(--neeto-ui-rounded);
   --neeto-ui-select-menu-margin-top: 6px;
   --neeto-ui-select-menu-margin-bottom: 16px;
-  --neeto-ui-select-menu-z-index: 20px;
+  --neeto-ui-select-menu-z-index: 20;
   --neeto-ui-select-menu-bg-color: rgb(var(--neeto-ui-white));
   --neeto-ui-select-menu-box-shadow: var(--neeto-ui-shadow-lg);
   --neeto-ui-select-menu-max-height: 480px;
